# kernel

./: .gitignore  BOOT_RELIABILITY.md  BUILDING.md  Cargo.toml  MESSAGE_DELIVERY.md  README.md  REVIEW.md  linker.ld  x86_64-tyn.json
docs/: boot-flow.md  module-structure.md  runtime-arch.md
src/: acpi.rs  apic.rs  beam.smp.elf  boot.rs  elf.rs  interrupts.rs  lib.rs  logger.rs  main.rs  multiboot.S  percpu.rs  pipe.rs  sched.rs  serial.rs  smp.rs  syscall.rs  thread.rs  vfs.rs
src/drivers/: mod.rs
src/drivers/virtio/: hal.rs  mod.rs
src/memory/: heap.rs  mod.rs
src/net/: device.rs  interface.rs  mod.rs  socket.rs  tcp_echo.rs
virtio-drivers-patched/src/: queue.rs
virtio-drivers-patched/src/device/net/: dev.rs  dev_raw.rs
virtio-drivers-patched/src/transport/: pci.rs
